--- a/menue/templates/menue/index.html
+++ b/menue/templates/menue/index.html
@@ -15,6 +15,8 @@
         <h1> Our pizzas </h1>
     </div>
 
+    <a href="{% url 'orders:order' %}"> Make an order </a>
+
     <div class="menu_list">
         {% for pizza in pizzas %}
         <div class="menu_element">
